# word-vaildator-api

./: Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  app.json  dictionary.txt  heroku.yml
src/: main.rs
