[package]
name = "word_validator_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
